@@ -1,3 +1,7 @@
+2009-07-28  higepon  <higepon@users.sourceforge.jp>
+
+        * Bignum.h (scheme): Added serialize/deserialize.
+
 2009-07-27  higepon  <higepon@users.sourceforge.jp>
 
         * library.scm (create-mosh-cache-dir): Now mosh uses /tmp, if HOME not found.
